readme + minor fixes

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -115,6 +115,12 @@
   justify-content: space-around;
 }
 
+.verified-container {
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 @media (max-width: 680px) {
   .item-container {
     flex-direction: column;
