--- a/static/style/style.css
+++ b/static/style/style.css
@@ -121,6 +121,14 @@
   justify-content: space-around;
 }
 
+.verified.good {
+  background-color: green;
+}
+
+.verified.bad {
+  background-color: red;
+}
+
 @media (max-width: 680px) {
   .item-container {
     flex-direction: column;
